<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo2_oak</name>
  <version>0.0.0</version>
  <description>
    Oak camera pipeline for Leo2
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  
  <license>MIT</license>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>depthai</build_depend>
  <build_depend>depthai_bridge</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>depthai</exec_depend>
  <exec_depend>depthai_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
