<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rapha_robot</name>
  <version>1.1.0</version>
  <description>Packages for Rapha Rover running on the robot.</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  
  <license>MIT</license>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rapha</exec_depend>  
  <exec_depend>rapha_bringup</exec_depend>
  <exec_depend>rapha_nav</exec_depend>
  <exec_depend>rapha_oak</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
